--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
     <version>3.8.0</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.16.1</version>
+</dependency>
+
 <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
 <dependency>
     <groupId>javax.annotation</groupId>
