--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     <artifactId>selenium-java</artifactId>
     <version>4.11.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
 
 <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -36,6 +42,20 @@
     <groupId>commons-net</groupId>
     <artifactId>commons-net</artifactId>
     <version>3.8.0</version>
+</dependency>
+
+<dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.3</version>
+  </dependency>
+
+  <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-ri -->
+<dependency>
+    <groupId>com.sun.xml.bind</groupId>
+    <artifactId>jaxb-ri</artifactId>
+    <version>2.3.2</version>
+    <type>pom</type>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
